edited atf responsive

--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,16 +1,18 @@
 <div id="atf" class="atf">
     <div class="atf-section">
-        <img class="shape" src="assets/img/atf-shape.svg" alt="Shape">
-        <img class="shape-mobile" src="assets/img/atf-shape-mobile.svg" alt="Shape">
+        <div class="shape-div">
+            <img class="shape" src="assets/img/atf-shape.svg" alt="Shape">
+            <img class="shape-mobile" src="assets/img/atf-shape-mobile.svg" alt="Shape">    
+        </div>
         <div class="atf-undersection">
             <div class="atf-content">
                 <div class="photo-div">
-                    <img src="assets/img/shadows/photo-bgr.svg" alt="Shadow" class="shadow">
+                    <!-- <img src="assets/img/shadows/photo-bgr.svg" alt="Shadow" class="shadow"> -->
                     <img class="profile-img" src="assets/img/piri.png" alt="Piri">
                 </div>
                 <div class="right-section">
                     <div class="title-div">
-                        <span>
+                        <span class="title-content">
                             <p class="iam">I am</p>
                             <h3 class="title-name">Pirathib Mahalingam</h3>
                             <p class="title-profession">FRONTEND DEVELOPER</p>
