--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -1,8 +1,9 @@
 .atf {
-    width: 100%;
+    width: 100vw;
     height: 100%;
     max-height: 100vh;
-    margin-bottom: 256px;
+    margin-top: 388px;
+    margin-bottom: 200px;
     display: flex;
     justify-content: center;
 }
@@ -12,78 +13,27 @@
     max-width: 1440px;
     height: 100%;
     max-height: 100vh;
-    // gap: 120px;
-    // display: flex;
-    // justify-content: center;
-}
-
-.shape-div {
-    height: 100%;
-    max-height: 100vh;
-    position: absolute;
-    top: 377.6px;
-    right: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    z-index: -1;
-    // border: 10px solid green;
-}
-
-.shape {
-    display: block;
-    width: 100%;
-    height: 1078.6px;
-    // position: absolute;
-    // top: 377.6px;
-    // bottom: 0;
-    // z-index: -1;
-}
-
-.shape-mobile {
-    display: none;
-    // position: absolute;
-    // z-index: -1;
-    width: 100%;
-    height: 467.43px;
-    // top: 345.09px;
-    // gap: 0px;
-    // opacity: 0px;
-}
-
-.atf-undersection {
-    // width: 100%;
-    // // max-width: 1440px;
-    // height: 100%;
-    // display: flex;
-    // flex-direction: column;
-    // // display: flex;
-    // // justify-content: center;
+    background-image: url('../../assets/img/atf-shape.svg');
+    background-size: cover;
+    background-position: center 0%;
+    background-repeat: no-repeat;
 }
 
 .atf-content {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
+    position: relative;
+    bottom: 168px;
 }
 
-// .photo-div {
-//     display: flex;
-// }
-
 .profile-img {
-    // position: relative;
-    // top: 200px;
-    // right: 809px;
     position: relative;
-    top: 190px;
     height: 620px;
     z-index: -2;
-    // // top: 140px;
-    // left: 47px;
-    // // width: 646px;
-    // // height: 705px;
 }
 
 .shadow {
@@ -94,13 +44,10 @@
 }
 
 .right-section {
-    // position: relative;
-    // top: 255px;
-    // right: 856px;
-    // top: 297px;
-    // width: max-content;
-    // height: max-content;
     text-align: center;
+    position: relative;
+    right: 100px;
+    bottom: 47px;
 }
 
 .title-div {
@@ -109,9 +56,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    // position: relative;
-    // top: 297px;
-    // left: 622px;
     gap: 35px;
 
     button {
@@ -139,8 +83,6 @@
     top: 73px;
     right: 340px;
     font-size: 50px;
-    // line-height: 76.8px;
-    // font-size: 64px;
     transform: rotate(270deg);
 }
 
@@ -182,19 +124,10 @@
     }
 }
 
-.atf-links {
-    // display: flex;
-    // justify-content: space-between;
-    // align-items: flex-end;
-}
-
 .contact-div {
     display: flex;
     position: relative;
-    top: 244px;
-    // position: relative;
-    // left: 0;
-    // bottom: 210px;
+    bottom: 155px;
 }
 
 .contact-section {
@@ -209,10 +142,7 @@
     display: flex;
     justify-content: flex-end;
     position: relative;
-    top: 135px;
-    // position: relative;
-    // right: 0;
-    // bottom: 255px;
+    bottom: 264px;
 }
 
 .scroll-section {
