--- a/src/app/above-the-fold/above-the-fold-mobile.component.scss
+++ b/src/app/above-the-fold/above-the-fold-mobile.component.scss
@@ -174,7 +174,7 @@
 }
 
 
-@media screen and (max-height: 1010px) {
+@media screen and (max-height: 1010px) and (max-width: 1440px) {
     .right-section {
         top: 32px;
     }
@@ -183,3 +183,31 @@
         bottom: 54px;
     }
 }
+
+@media screen and (min-height: 1050px) {
+    .atf-undersection {
+        position: relative;
+        top: 111px;
+    }
+}
+
+@media screen and (min-height: 1450px) {
+    .atf-undersection {
+        position: relative;
+        top: 300px;
+    }
+}
+
+@media screen and (min-height: 1900px) {
+    .atf-undersection {
+        position: relative;
+        top: 366px;
+    }
+}
+
+@media screen and (max-width: 1440px) {
+    .atf-undersection {
+        top: 182px;
+    }
+}
+
