--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -2,13 +2,14 @@
     display: flex;
     justify-content: center;
     scroll-margin-top: 180px;
-    margin-bottom: 256px;
+    margin-top: 100px;
 }
 
 .about-me-section {
     width: 100%;
     max-width: 1440px;
     height: 100%;
+    padding: 37px 0px 37px 100px;
     display: flex;
     justify-content: space-between;
 }
@@ -19,7 +20,6 @@
     align-items: flex-start;
     justify-content: space-between;
     position: relative;
-    left: 100px;
     gap: 34px;
 }
 
@@ -61,6 +61,7 @@
 }
 
 .img-div {
+    width: 50%;
     display: flex;
     align-items: center;
 }
@@ -88,48 +89,4 @@
     width: 267px;
     height: 0;
     border-top: 4px solid var(--light-blue);
-}
-
-@media screen and (min-width: 390px) {
-
-}
-
-@media screen and (max-width: 390px) {
-    .about-me {
-        margin-bottom: 156px;
-        scroll-margin-top: 120px;
-    }
-
-    .about-me-section {
-        max-width: 390px;
-    }
-
-    .about-me-content {
-        left: 25px;
-    }
-
-    .text-div {
-        width: 338px;
-    }
-    
-    .keys-div {
-        align-items: center;
-
-        p {
-            width: 252px;
-        }
-    }
-
-    .icon {
-        width: 50px;
-        height: 50px;
-    }
-
-    .puzzle {
-        padding-left: 6px;
-    }
-
-    .img-div {
-        display: none;
-    }
 }
