--- a/src/app/above-the-fold/above-the-fold-mobile.component.scss
+++ b/src/app/above-the-fold/above-the-fold-mobile.component.scss
@@ -1,6 +1,6 @@
 @media screen and (max-width: 1440px) {
     .atf {
-        margin-top: 388px;
+        // margin-top: 388px;
     }
 
     .atf-section {
