--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -3,7 +3,7 @@
     height: 100%;
     max-height: 100vh;
     margin-top: 388px;
-    margin-bottom: 200px;
+    // margin-bottom: 200px;
     display: flex;
     justify-content: center;
 }
