--- a/src/app/shared/components/header/header-mobile.component.scss
+++ b/src/app/shared/components/header/header-mobile.component.scss
@@ -42,6 +42,9 @@
 
 ////////////////////////////////////////////
 
+@media screen and (max-width: 1440px) {
+
+}
 
 @media screen and (max-width: 1024px) {
 
