edited myskills responsive

--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     scroll-margin-top: 180px;
-    margin-bottom: 256px;
+    margin-top: 120px;
 }
 
 .skills-section {
@@ -127,79 +127,4 @@
     left: 563px;
     width: 58px;
     border-top: 4px solid var(--purple);
-}
-
-@media screen and (max-width: 390px) {
-    .skills {
-        scroll-margin-top: 120px;
-    }
-
-    .skills-section {
-        max-width: 390px;
-    }
-
-    .skills-content {
-        flex-direction: column-reverse;
-    }
-
-    .icon-div {
-        margin-left: unset;
-        padding: 35px 25px;
-        gap: 54px;
-    }
-
-    .title-content {
-        position: unset;
-
-    }
-
-    .title-header {
-        display: unset;
-        width: 338px;
-
-        p {
-            width: 338px;
-        }
-    }
-
-    .title-div {
-        padding-right: 25px;
-    }
-
-    .border {
-        width: 20px;
-        position: absolute;
-        top: 28px;
-        left: unset;
-        right: 0;
-    }
-
-    .button-div {
-        position: relative;
-        top: 712px;
-
-        button {
-            font-size: 16px;
-            line-height: 19.2px;
-        }
-    }
-
-    .icons {
-        width: 77px;
-
-        p {
-            font-size: 14px;
-            line-height: 16.8px;
-        }
-    }
-
-    .icon {
-        height: 100px;
-        display: flex;
-        align-items: flex-end;
-
-        img {
-            height: 45px;
-        }
-    }
 }
