--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -2,12 +2,13 @@
     display: flex;
     justify-content: center;
     scroll-margin-top: 180px;
-    margin-bottom: 256px;
+    margin-top: 114px;
 }
 
 .portfolio-content {
     width: 100%;
     max-width: 1440px;
+    padding: 37px 0px 37px 50px;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -23,6 +24,7 @@
 h2 {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
 }
 
 p {
@@ -30,16 +32,12 @@ p {
 }
 
 .border-left {
-    position: relative;
-    top: 56px;
     margin-right: 10px;
     width: 109px;
     border-top: 4px solid var(--purple);
 }
 
 .border-right {
-    position: relative;
-    top: 56px;
     margin-left: 10px;
     width: 484px;
     border-top: 4px solid var(--purple);
@@ -48,47 +46,4 @@ p {
 .work {
     position: relative;
     
-}
-
-@media screen and (max-width: 390px) {
-    .portfolio {
-        margin-bottom: 156px;
-        scroll-margin-top: 120px;
-    }
-
-    .portfolio-content {
-        max-width: 390px;
-    }
-
-    .border-left {
-        top: unset;
-        width: 20px;
-    }
-
-    .border-right {
-        top: unset;
-        width: 75px;
-    }
-
-    .portfolio-header {
-        align-items: center;
-        h2 {
-            width: 390px;
-            align-items: center;
-        }
-
-        p {
-            margin-top: 22px;
-            text-align: center;
-            width: 340px;
-        }
-    }
-
-    .portfolio-mobileview {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-
 }
