edited contact responsive

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,5 +2,5 @@
 <!-- <app-shadow></app-shadow> -->
 <!-- <app-about-me></app-about-me> -->
 <!-- <app-my-skills></app-my-skills> -->
-<app-portfolio></app-portfolio>
-<!-- <app-contact></app-contact> -->
+<!-- <app-portfolio></app-portfolio> -->
+<app-contact></app-contact>
