--- a/src/app/contact/contact-mobile.component.scss
+++ b/src/app/contact/contact-mobile.component.scss
@@ -18,8 +18,8 @@
     .go-up {
         position: relative;
         top: 46px;
-        left: 325px;
-        margin-top: 64px;
+        right: -126px;
+        margin-top: 22px
     }
 
     .contact-undersection {
