actiated all sections

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="contact" >
     <div class="contact-content" id="contact">
         <div class="contact-div">
-            <div class="border"></div>
+            <!-- <div class="border"></div> -->
             <h2>Contact</h2>
             <div class="contact-undersection">
                 <div class="text-div">
@@ -76,9 +76,9 @@
                 </div>
             </div>
         </div>
-        <div class="go-up">
+        <!-- <div class="go-up">
             <a href="#atf" class="go-up-btn"><img (mouseenter)="hover = true;" (mouseleave)="hover = false;"
                     [src]="hover ? 'assets/img/go-up-btn-hover.svg' : 'assets/img/go-up-btn.svg'" alt="Go up"></a>
-        </div>
+        </div> -->
     </div>
 </div>
