--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -3,15 +3,15 @@
         <div class="about-me-content">
             <h2>About me</h2>
             <div class="text-div">
-                <p>Hi, I am a Front-end developer based in Kreuzlingen, Switzerland. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut auctor sem non tempus convallis. Integer et justo vitae urna finibus eleifend sit amet porttitor sapien.</p>
+                <p>Hi, I am a Front-end developer based in Kreuzlingen, Switzerland. I am passionate about creating efficient and innovative web solutions. I have a diverse skill set, including proficiency in JavaScript, Angular, REST APIs, and more. I aim to continue my journey as a Fullstack Developer and complete my Computer Science degree.</p>
                 <div class="keys-section">
                     <div class="keys-div">
                         <img class="icon" src="assets/img/bulb.svg" alt="">
-                        <p>Some personal thing to share(...) Donec ut imperdiet diam, et convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                        <p>I am fascinated by the process of creating new web solutions and continuously building my skills. I find great joy in problem-solving and turning complex challenges into simple, user-friendly experiences. My curiosity drives me to explore new technologies and stay updated with industry trends.</p>
                     </div>
                     <div class="keys-div">
                         <img class="icon puzzle" src="assets/img/puzzle.svg" alt="">
-                        <p>Some personal thing to share(...) Donec ut imperdiet diam, et convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                        <p>Beyond coding, I enjoy collaborating with others, sharing knowledge, and learning from different perspectives. I believe that the best solutions come from a combination of technical expertise and creative thinking.</p>
                     </div>
                 </div>
             </div>
