--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -28,7 +28,7 @@
                             <a href="https://linkedin.com" target="_blank"><img src="assets/img/linkedin-btn.svg"
                                     alt="Linkedin"></a>
                         </div>
-                        <a href="#contact" class="mail-div">hello&#64;pirathib-mahalingam.com</a>
+                        <a href="#contact" class="mail-div">hello&#64;pirathib-mahalingam.ch</a>
                     </div>
                 </div>
                 <div class="scroll-div">
