--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -2,7 +2,9 @@
     display: flex;
     justify-content: center;
     scroll-margin-top: 180px;
-    margin-top: 100px;
+    margin-top: -300px;
+    position: relative;
+    z-index: 1;
 }
 
 .about-me-section {
