--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -2,10 +2,11 @@
     width: 100vw;
     height: 100%;
     max-height: 100vh;
-    margin-top: 388px;
+    margin-top: 344px;
     // margin-bottom: 200px;
     display: flex;
     justify-content: center;
+    scroll-margin-top: 414px;
 }
 
 .atf-section {
