--- a/src/app/above-the-fold/above-the-fold-mobile.component.scss
+++ b/src/app/above-the-fold/above-the-fold-mobile.component.scss
@@ -81,6 +81,12 @@
         font-size: 24px;
     }
 
+    .ichbin {
+        top: 38px;
+        right: 165px;
+        font-size: 15px;
+    }
+
     .title-content {
         left: 8px;
     }
@@ -144,6 +150,12 @@
         top: 31px;
         right: 130px;
         font-size: 18px;
+    }
+
+    .ichbin {
+        top: 32px;
+        right: 129px;
+        font-size: 11px;
     }
 
     .contact-section {
